clusters/agora-rke2/bnb/bnb-status.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: bnb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      serviceAccountName: uptime-kuma-svc-a
      volumes:
      - name: uptime-kuma-data
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:latest
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: uptime-kuma-data
          mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: bnb
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
  - port: 80
    targetPort: 3001
