clusters/agora-rke2/bnb/bnb-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bnbdocs
  namespace: bnb
  labels:
    app: bnbdocs
    pod-security.kubernetes.io/audit: baseline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bnbdocs
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: bnbdocs
    spec:
      serviceAccountName: bnbdocs-svc-a
      imagePullSecrets:
      - name: regcred-bnb
      containers:
      - name: bnbdocs
        image: europe-west3-docker.pkg.dev/bnbdevelopment/portfolio/docs:2.20.1 # {"$imagepolicy": "flux-system:bnbdocs"}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 3000
          name: frontend-open
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: bnbdocs-svc
  namespace: bnb
spec:
  selector:
    app: bnbdocs
  ports:
  - port: 8000
    targetPort: frontend-open
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bnbdocs-ingressroute
  namespace: bnb
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: "Host(`docs.bnbdevelopment.hu`) && PathPrefix(`/`)"
      kind: Rule
      services:
        - name: bnbdocs-svc
          port: 8000
